# ScreenShare

./: .gitignore  CMakeLists.txt  LICENSE  OPTIMIZATION_NOTES.md  README.md  README_zh.md  ScreenShare.manifest  ScreenShare.rc  UI_IMPROVEMENTS.md
include/: common.h  receiver.h  resource.h  sender.h
src/: common.cpp  main.cpp  receiver.cpp  sender.cpp
tools/: convert_to_ico.ps1
